<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/title"
            style="@style/PrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/theme_title" />

    <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <RadioButton
                android:id="@+id/themeDark"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme" />

        <RadioButton
                android:id="@+id/themeLight"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme" />

        <RadioButton
                android:id="@+id/themeSystem"
                style="@style/SecondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_theme"
                android:checked="true"/>

    </RadioGroup>

    <Button
            android:id="@+id/signup_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/themeGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/confirm_sign_up" tools:ignore="HardcodedText"/>

</androidx.constraintlayout.widget.ConstraintLayout>